Tweak app title css to prevent overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,6 +25,7 @@
 
 .app-title {
   padding-left: 16px;
+  overflow: hidden;
 }
 
 .main-toolbar {
